fix(13): WR-01 use 70dvh instead of 70vh for analysisPanel on mobile

--- a/src/app/(app)/games/[id]/GameView.module.css
+++ b/src/app/(app)/games/[id]/GameView.module.css
@@ -818,7 +818,7 @@
     border-left: none;
     border-top: none;
     width: 100%;
-    height: 70vh;
+    height: 70dvh;
     position: relative;
   }
 
